--- a/Project-velentine/index.html
+++ b/Project-velentine/index.html
@@ -6,7 +6,7 @@
     <title>💌 Love Letter for You 💖</title>
     <style>
         /* ✨ Import cute fonts ✨ */
-        @import url('https://fonts.googleapis.com/css2?family=Caveat:wght@400;700&family=Quicksand:wght@300;400;600;700&family=Pacifico&display=swap');
+        @import url('https://fonts.googleapis.com/css2?family=Caveat:wght@400;700&family=Quicksand:wght@300;400;600;700;900&family=Pacifico&display=swap');
 
         * {
             margin: 0;
@@ -28,6 +28,93 @@
         @keyframes gradientFlow {
             0%, 100% { background-position: 0% 50%; }
             50% { background-position: 100% 50%; }
+        }
+
+        /* ========== WATERMARK STYLE ========== */
+        .watermark-overlay {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100vw;
+            height: 100vh;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            z-index: 9990; /* High z-index */
+            pointer-events: none; /* Allows clicks to pass through */
+            overflow: hidden;
+        }
+
+        .watermark-text {
+            font-family: 'Quicksand', sans-serif;
+            font-weight: 900;
+            font-size: 5rem;
+            /* Using theme pink color with low opacity */
+            color: rgba(255, 105, 180, 0.08); 
+            text-transform: uppercase;
+            text-align: center;
+            transform: rotate(-30deg);
+            line-height: 1.2;
+            white-space: nowrap;
+            user-select: none;
+            border: 5px solid rgba(255, 105, 180, 0.08);
+            padding: 2rem;
+            border-radius: 30px;
+        }
+
+        @media (max-width: 768px) {
+            .watermark-text {
+                font-size: 2.5rem;
+                white-space: normal;
+            }
+        }
+
+        /* ========== PROMOTION BANNER STYLE ========== */
+        .promo-banner {
+            position: fixed;
+            top: 20px;
+            right: 20px;
+            z-index: 10000;
+            background: rgba(255, 255, 255, 0.85);
+            backdrop-filter: blur(8px);
+            padding: 15px 25px;
+            border: 3px solid #FF69B4; /* Hot Pink */
+            border-radius: 20px;
+            text-align: center;
+            box-shadow: 0 10px 20px rgba(255, 105, 180, 0.3);
+            pointer-events: none;
+        }
+
+        .promo-banner img {
+            width: 60px;
+            height: auto;
+            margin-bottom: 5px;
+        }
+
+        .promo-banner h2 {
+            font-family: 'Quicksand', sans-serif;
+            font-weight: 800;
+            font-size: 1.5rem;
+            color: #DB7093;
+            margin: 0;
+            text-transform: uppercase;
+            letter-spacing: 1px;
+        }
+
+        .promo-banner span {
+            display: block;
+            font-size: 0.8rem;
+            color: #888;
+            font-weight: 600;
+        }
+
+        @media (max-width: 768px) {
+            .promo-banner {
+                top: 10px;
+                right: 10px;
+                padding: 10px;
+            }
+            .promo-banner h2 { font-size: 1rem; }
         }
 
         /* 💕 Floating hearts background 💕 */
@@ -646,6 +733,20 @@
     </style>
 </head>
 <body>
+
+    <div class="watermark-overlay">
+        <div class="watermark-text">
+            PREVIEW LINK ONLY <br>
+            DM TO CUSTOMIZE
+        </div>
+    </div>
+
+    <div class="promo-banner">
+        <img src="your-logo-link-here.png" alt="WISHCRAFT LOGO" onerror="this.style.display='none'">
+        <h2>DM WISHCRAFT</h2>
+        <span>TO CUSTOMIZE YOURS</span>
+    </div>
+
     <div class="floating-hearts" id="floatingHearts"></div>
 
     <div class="container">
@@ -747,7 +848,7 @@
                 <div class="timeline-item">
                     <div class="timeline-icon">💕</div>
                     <div class="timeline-content">
-                        <div class="timeline-date">June 10, 2024</div>
+                        <div class="timeline-date">June 10, 2023</div>
                         <div class="timeline-title">First Meet Up</div>
                         <div class="timeline-description">The day our story began! My heart knew something special was happening 💖</div>
                     </div>
